<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".IntentsPlayground">

    <TextView
        android:id="@+id/explicitContent"
        style="@style/TextAppearance.MaterialComponents.Headline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/explicit_content"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:onClick="openMainActivity"
        android:text="@string/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/explicitContent" />

    <View
        android:id="@+id/view"
        android:layout_width="wrap_content"
        android:layout_height="2dp"
        android:layout_marginTop="16dp"
        android:background="@color/divider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button" />

    <TextView
        android:id="@+id/implicitContent"
        style="@style/TextAppearance.MaterialComponents.Headline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/implicit_content"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/data"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:hint="@string/data"
        app:layout_constraintTop_toBottomOf="@+id/implicitContent">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/data">

        <RadioButton
            android:id="@+id/openWebPageBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/openWebpage" />

        <RadioButton
            android:id="@+id/DialNumberButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/DialNumber" />
        <RadioButton
            android:id="@+id/ShareText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ShareText" />
    </RadioGroup>

    <Button
        android:id="@+id/sendImplicitbtn"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:onClick="sendImplicitIntent"
        android:text="@string/button1"
        app:layout_constraintBottom_toBottomOf="@+id/radioGroup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup"
        app:layout_constraintVertical_bias="1.0" />

    <View
                android:id="@+id/view2"
                android:layout_width="wrap_content"
                android:layout_height="2dp"
                android:layout_marginTop="16dp"
                android:background="@color/divider"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/sendImplicitbtn" />

    <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/data2"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:hint="@string/data"
                app:layout_constraintEnd_toStartOf="@+id/sendCounterBtn"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/sendReceiveData">

                <com.google.android.material.textfield.TextInputEditText
                    android:inputType="number"
                    android:maxLength="3"
                    android:layout_width="268dp"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/sendCounterBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:onClick="sendcounterBtn"
        android:text="@string/button2"
        app:layout_constraintBottom_toBottomOf="@+id/data2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/data2"
        app:layout_constraintVertical_bias="0.551" />

    <TextView
        android:id="@+id/sendReceiveData"
        style="@style/TextAppearance.MaterialComponents.Headline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/SendReceivedData"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view2" />

    <TextView
        android:id="@+id/result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:text="@string/textView4"
        android:visibility="invisible"
        app:layout_constraintTop_toBottomOf="@+id/data2"
        tools:layout_editor_absoluteX="66dp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginLeft="16dp" />

</androidx.constraintlayout.widget.ConstraintLayout>